# Calculator

./: README.md
src/: Doxyfile  Makefile  mainpage.md  s21_calculation.cc  s21_calculation.h  s21_controller.cc  s21_controller.h  s21_helpers.cc  s21_helpers.h  s21_main.cc  s21_map.cc  s21_map.h  s21_model.cc  s21_model.h  s21_parser.cc  s21_parser.h  s21_polish_notation.cc  s21_polish_notation.h  s21_token.cc  s21_token.h  s21_validator.cc  s21_validator.h
src/Calc/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
